* Merged duplicated code to one single function * Fixed error with "findOne" function returning an array of array * Updated grpc to latest version * Updated both Firebase and Firebase-admin to latest version

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,12 @@ typings/
 test
 .idea
 
+.idea/vcs.xml
+public/assets/
+src/appRedux/
+src/assets/
+src/components/
+src/constants/
+src/containers/
+src/routes/
+src/util/
